.antlr/tokParser.java
// Generated from /Users/leonardofonseca/Documents/faculdade/compilador/tok.g4 by ANTLR 4.9.2

    import java.util.*;
	import java.util.Stack;
	import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tokParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, AP=13, FP=14, ACH=15, FCH=16, STR=17, NUM=18, 
		BOOL=19, OP=20, OPREL=21, ATT=22, VIR=23, ID=24, WS=25;
	public static final int
		RULE_start = 0, RULE_decl = 1, RULE_bloco = 2, RULE_declaraVar = 3, RULE_tipo = 4, 
		RULE_cmd = 5, RULE_cmdattrib = 6, RULE_expressao = 7, RULE_termo = 8, 
		RULE_cmdleitura = 9, RULE_cmdescrita = 10, RULE_cmdselecao = 11, RULE_cmdrepete = 12, 
		RULE_cmdenquanto = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "decl", "bloco", "declaraVar", "tipo", "cmd", "cmdattrib", "expressao", 
			"termo", "cmdleitura", "cmdescrita", "cmdselecao", "cmdrepete", "cmdenquanto"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fim;'", "';'", "'num'", "'binario'", "'txt'", "'ler'", 
			"'imprimir'", "'caso'", "'caso contrario'", "'repete'", "'enquanto'", 
			"'('", "')'", "'{'", "'}'", null, null, null, null, null, "':='", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "AP", "FP", "ACH", "FCH", "STR", "NUM", "BOOL", "OP", "OPREL", 
			"ATT", "VIR", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tok.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private int _tipoVar;
		private String _nomeVar;
		private String _valorVar;

	    private String _expressaoID;
		private String _exprContent;
	    
	    private String _leituraID;

	    private String _escritaID;

	    private String _expressaoDecisao;


		private ArrayList<AbstractCommand> curThread;
	    private Stack<ArrayList<AbstractCommand>> stack = new Stack<ArrayList<AbstractCommand>>();
	    private Simbolo simbolo;
	    private Programa programa = new Programa();
	    InicioFim inicioFim = new InicioFim();
	    TabelaSimbolo tabelaSimbolo = new TabelaSimbolo();

	    private ArrayList<AbstractCommand> comandosTrue;
		private ArrayList<AbstractCommand> comandosFalse;

	    private String _repeteQuantidade;
	    private String _repeteContador;
	    private ArrayList<AbstractCommand> comandosRepete;

	    private String _expressaoEnquanto;
	    private ArrayList<AbstractCommand> comandosEnquanto;

	    public void verificaVariavelExiste(String id) {
	        if (!tabelaSimbolo.existe(id)) {
	            throw new ErrorCompilador("Simbolo " + id + " nao declarado");
	        }
	    }


	public tokParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(T__0);
			setState(29);
			decl();
			setState(30);
			bloco();
			setState(31);
			match(T__1);

			    programa.setTabelaSimbolo(tabelaSimbolo);
			    programa.setComandos(stack.pop());
			    programa.generateTarget();

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public List<DeclaraVarContext> declaraVar() {
			return getRuleContexts(DeclaraVarContext.class);
		}
		public DeclaraVarContext declaraVar(int i) {
			return getRuleContext(DeclaraVarContext.class,i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(34);
				declaraVar();
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    curThread = new ArrayList<AbstractCommand>();
			    stack.push(curThread);

			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				cmd();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaraVarContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(tokParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tokParser.ID, i);
		}
		public List<TerminalNode> VIR() { return getTokens(tokParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(tokParser.VIR, i);
		}
		public DeclaraVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraVar; }
	}

	public final DeclaraVarContext declaraVar() throws RecognitionException {
		DeclaraVarContext _localctx = new DeclaraVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaraVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			tipo();
			setState(46);
			match(ID);

			    _nomeVar = _input.LT(-1).getText();
			    _valorVar = null;
			    simbolo = new Variaveis(_nomeVar, _tipoVar, _valorVar);
			    if (!tabelaSimbolo.existe(_nomeVar)) {
			        tabelaSimbolo.adiciona(simbolo);
			    } else {
			        throw new ErrorCompilador("Simbolo " + _nomeVar + " já declarado");
			    }

			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIR) {
				{
				{
				setState(48);
				match(VIR);
				setState(49);
				match(ID);

				    _nomeVar = _input.LT(-1).getText();
				    _valorVar = null;
				    simbolo = new Variaveis(_nomeVar, _tipoVar, _valorVar);
				    if (!tabelaSimbolo.existe(_nomeVar)) {
				        tabelaSimbolo.adiciona(simbolo);
				    } else {
				        throw new ErrorCompilador("Simbolo " + _nomeVar + " já declarado");
				    }

				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(T__3);
				_tipoVar = Variaveis.NUMBER;
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(T__4);
				_tipoVar = Variaveis.BOOL;
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(T__5);
				_tipoVar = Variaveis.STRING;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmdattribContext cmdattrib() {
			return getRuleContext(CmdattribContext.class,0);
		}
		public CmdleituraContext cmdleitura() {
			return getRuleContext(CmdleituraContext.class,0);
		}
		public CmdescritaContext cmdescrita() {
			return getRuleContext(CmdescritaContext.class,0);
		}
		public CmdselecaoContext cmdselecao() {
			return getRuleContext(CmdselecaoContext.class,0);
		}
		public CmdrepeteContext cmdrepete() {
			return getRuleContext(CmdrepeteContext.class,0);
		}
		public CmdenquantoContext cmdenquanto() {
			return getRuleContext(CmdenquantoContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmd);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				cmdattrib();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				cmdleitura();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				cmdescrita();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				cmdselecao();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				cmdrepete();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				cmdenquanto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdattribContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode ATT() { return getToken(tokParser.ATT, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public CmdattribContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdattrib; }
	}

	public final CmdattribContext cmdattrib() throws RecognitionException {
		CmdattribContext _localctx = new CmdattribContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdattrib);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(ID);

			    verificaVariavelExiste(_input.LT(-1).getText());
			    _expressaoID = _input.LT(-1).getText();

			setState(76);
			match(ATT);
			  _exprContent = ""; 
			setState(78);
			expressao();
			setState(79);
			match(T__2);

			    ComandoAtribuicao comando = new ComandoAtribuicao(_expressaoID, _exprContent);
			    stack.peek().add(comando);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressaoContext extends ParserRuleContext {
		public List<TermoContext> termo() {
			return getRuleContexts(TermoContext.class);
		}
		public TermoContext termo(int i) {
			return getRuleContext(TermoContext.class,i);
		}
		public List<TerminalNode> OP() { return getTokens(tokParser.OP); }
		public TerminalNode OP(int i) {
			return getToken(tokParser.OP, i);
		}
		public ExpressaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao; }
	}

	public final ExpressaoContext expressao() throws RecognitionException {
		ExpressaoContext _localctx = new ExpressaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expressao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			termo();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OP) {
				{
				{
				setState(83);
				match(OP);
				_exprContent += _input.LT(-1).getText();
				setState(85);
				termo();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode NUM() { return getToken(tokParser.NUM, 0); }
		public TerminalNode STR() { return getToken(tokParser.STR, 0); }
		public TerminalNode BOOL() { return getToken(tokParser.BOOL, 0); }
		public TermoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termo; }
	}

	public final TermoContext termo() throws RecognitionException {
		TermoContext _localctx = new TermoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_termo);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				match(ID);

				        verificaVariavelExiste(_input.LT(-1).getText());
				        _exprContent += _input.LT(-1).getText();
				    
				}
				break;
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(NUM);

				        _exprContent += _input.LT(-1).getText();
				    
				}
				break;
			case STR:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				match(STR);

				        _exprContent += _input.LT(-1).getText();
				    
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				match(BOOL);

				        _exprContent += _input.LT(-1).getText();
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdleituraContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(tokParser.AP, 0); }
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode FP() { return getToken(tokParser.FP, 0); }
		public CmdleituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdleitura; }
	}

	public final CmdleituraContext cmdleitura() throws RecognitionException {
		CmdleituraContext _localctx = new CmdleituraContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmdleitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__6);
			setState(102);
			match(AP);
			setState(103);
			match(ID);

			    verificaVariavelExiste(_input.LT(-1).getText());
			    _leituraID = _input.LT(-1).getText();

			setState(105);
			match(FP);
			setState(106);
			match(T__2);

			    Variaveis var = (Variaveis)tabelaSimbolo.get(_leituraID);
			    ComandoLeitura comando = new ComandoLeitura(_leituraID, var);
			    stack.peek().add(comando);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdescritaContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(tokParser.AP, 0); }
		public TerminalNode FP() { return getToken(tokParser.FP, 0); }
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode STR() { return getToken(tokParser.STR, 0); }
		public CmdescritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdescrita; }
	}

	public final CmdescritaContext cmdescrita() throws RecognitionException {
		CmdescritaContext _localctx = new CmdescritaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmdescrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__7);
			setState(110);
			match(AP);
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(111);
				match(ID);

				    verificaVariavelExiste(_input.LT(-1).getText());
				    _escritaID = _input.LT(-1).getText();

				    
				}
				break;
			case STR:
				{
				setState(113);
				match(STR);

				        _escritaID = _input.LT(-1).getText();
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(117);
			match(FP);
			setState(118);
			match(T__2);

			    ComandoEscrita comando = new ComandoEscrita(_escritaID);
			    stack.peek().add(comando);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdselecaoContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(tokParser.AP, 0); }
		public List<TerminalNode> ID() { return getTokens(tokParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tokParser.ID, i);
		}
		public TerminalNode OPREL() { return getToken(tokParser.OPREL, 0); }
		public TerminalNode FP() { return getToken(tokParser.FP, 0); }
		public List<TerminalNode> ACH() { return getTokens(tokParser.ACH); }
		public TerminalNode ACH(int i) {
			return getToken(tokParser.ACH, i);
		}
		public List<TerminalNode> FCH() { return getTokens(tokParser.FCH); }
		public TerminalNode FCH(int i) {
			return getToken(tokParser.FCH, i);
		}
		public TerminalNode NUM() { return getToken(tokParser.NUM, 0); }
		public TerminalNode STR() { return getToken(tokParser.STR, 0); }
		public TerminalNode BOOL() { return getToken(tokParser.BOOL, 0); }
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CmdselecaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdselecao; }
	}

	public final CmdselecaoContext cmdselecao() throws RecognitionException {
		CmdselecaoContext _localctx = new CmdselecaoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cmdselecao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__8);
			setState(122);
			match(AP);
			setState(123);
			match(ID);

			            comandosFalse = new ArrayList<AbstractCommand>();
			            _expressaoDecisao = _input.LT(-1).getText();
			        
			setState(125);
			match(OPREL);
			 _expressaoDecisao += _input.LT(-1).getText();  
					
			setState(127);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STR) | (1L << NUM) | (1L << BOOL) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			_expressaoDecisao += _input.LT(-1).getText(); 
			setState(129);
			match(FP);
			setState(130);
			match(ACH);

			            curThread = new ArrayList<AbstractCommand>();
			            stack.push(curThread);
			        
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				cmd();
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << ID))) != 0) );
			setState(137);
			match(FCH);

			            comandosTrue = stack.pop();
			        
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(139);
				match(T__9);
				setState(140);
				match(ACH);

				            curThread = new ArrayList<AbstractCommand>();
				            stack.push(curThread);
				        
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(142);
					cmd();
					}
					}
					setState(145); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << ID))) != 0) );
				setState(147);
				match(FCH);

				            comandosFalse = stack.pop();
				        
				}
			}


			        ComandoDecisao comando = new ComandoDecisao(_expressaoDecisao, comandosTrue, comandosFalse);
			        stack.peek().add(comando);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdrepeteContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(tokParser.AP, 0); }
		public TerminalNode NUM() { return getToken(tokParser.NUM, 0); }
		public TerminalNode VIR() { return getToken(tokParser.VIR, 0); }
		public TerminalNode ID() { return getToken(tokParser.ID, 0); }
		public TerminalNode FP() { return getToken(tokParser.FP, 0); }
		public TerminalNode ACH() { return getToken(tokParser.ACH, 0); }
		public TerminalNode FCH() { return getToken(tokParser.FCH, 0); }
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CmdrepeteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdrepete; }
	}
